--- a/css/main.css
+++ b/css/main.css
@@ -1360,7 +1360,7 @@ a#tag {
 }
 
 @font-face {
-  font-family: "SATOSHI";
+  font-family: "Satoshi Variable";
 
   src:url("../fonts/Satoshi-Variable.ttf") format('ttf'),
         url("../fonts/Satoshi-Variable.eot") format('eot'),
