--- a/css/main.css
+++ b/css/main.css
@@ -1363,8 +1363,7 @@ a#tag {
   font-family: 'Satoshi-Variable';
 
   src: url('../fonts/Satoshi-Variable.woff2') format('woff2'),
-       url('../fonts/Satoshi-Variable.woff') format('woff'),
-       url('../fonts/Satoshi-Variable.ttf') format('truetype');
+       url('../fonts/Satoshi-Variable.woff') format('woff');
 
   font-weight: 300 900;
 
